# tbd-agents

./: .dockerignore  .env copy.example  .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  alembic.ini  docker-compose-dev.yml  docker-compose.test.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  RELEASE_TEMPLATE.md
.github/workflows/: docs.yml  integration-tests.yml  release.yml  secret-scan.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: celery_app.py  config.py  db.py  db_postgres.py  main.py  observability.py  plugins.yaml
app/api/: deps.py
app/core/: __init__.py  agent_engine.py  event_bus.py  guardrails.py  knowledge_retriever.py  (+6 more)
codegraph-sidecar/: Dockerfile  package.json
docs/: agent-chat-plan.md  api-reference.md  architecture.md  contributing.md  features.md  github-settings-guide.md  index.md  knowledge-base.md  local-setup.md  quickstart.md
frontend/: .gitignore  README.md  pubspec.yaml
observability/: alert-rules.yml  loki-config.yaml  otel-collector-config.yaml  prometheus.yml  promtail-config.yaml  tempo-config.yaml
scripts/: migrate_mongo_to_postgres.py  seed_sre_agent.py  sync_mcp_allowed_tools.py  verify_migration.py
site/: 404.html  index.html  sitemap.xml
tests/: conftest.py  test_agent_custom_tools.py  test_agent_engine.py  test_auth.py  test_byok_provider.py  test_celery_routing.py  test_chat.py  test_chat_api.py  test_chord_fanout.py  test_claude_client.py  test_code_chunker.py  test_code_repositories.py  test_codegraph_routes.py  test_codegraph_service.py  test_compaction.py  test_config.py  test_copilot_client.py  test_custom_tool_runner.py  test_custom_tools_api.py  test_dashboard_legacy.py  test_deps.py  test_embeddings.py  test_event_bus.py  test_export_import.py  test_google_adk_runtime.py  test_google_sheets_analyst_seed.py  test_google_sheets_plugin.py  test_guardrails.py  test_health.py  test_index_jobs.py  test_indexed_file_model.py  test_indexing_pipeline.py  test_knowledge.py  test_mcp_allowlists.py  test_memory.py  test_models.py  test_models_api.py  test_observability.py  test_pgvector.py  test_plugin_base.py  (+16 more)
(+281 files in other folders)
