[project]
name = "copilot-agent-hub"
version = "0.2.0"
description = "Multi-agent API hub powered by the official GitHub Copilot SDK with MCP support"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "beanie>=1.26.0,<2.0.0",
    "motor>=3.5.0,<3.7.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.5.0",
    "github-copilot-sdk",
    "mcp>=1.8.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "cryptography>=43.0.0",
    "jsonschema>=4.23.0",
    # Observability
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-instrumentation-celery>=0.50b0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
